# pixel-perfect-circles

./: .gitignore  README.md  index.html
js/: circle-utils.js  circles.js  draw-circles.js  length-utils.js
js/tests/: run-all-tests.js  test.html  test_all.js
python/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
python/pixel_perfect_circles/: circle.py  common.py  length_utils.py  main.py
python/tests/: test_circle.py  test_common.py  test_length_utils.py
