[metadata]
name = pixel_perfect_circles
description = Eye-pleasing pixel circles
author = FEST_Channel
platforms = win64
classifiers =
    Programming Language :: Python :: 3.11 :: Only

[options]
zip_safe = False
packages = find:
install_requires =
    matplotlib>=3.7.2
python_requires = >=3.11

[options.extras_require]
testing =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.4.1
    flake8>=6.1.0
    tox>=4.6.4

[options.package_data]
pixel_perfect_circles = py.typed

[flake8]
max-line-length = 240